[gd_scene load_steps=10 format=3 uid="uid://ba5aa2t0kfl2p"]

[ext_resource type="Script" uid="uid://ckldf8n02mjo4" path="res://Scenes/player.gd" id="1_mhc21"]
[ext_resource type="Texture2D" uid="uid://dax8ods3tlfpx" path="res://Art/Player.png" id="2_sbtbl"]
[ext_resource type="AudioStream" uid="uid://dgndurqupc34p" path="res://SFX/TailWhip.wav" id="4_2l08b"]
[ext_resource type="AudioStream" uid="uid://ddcbtkgo5erc2" path="res://SFX/qubodupFireLoop.ogg" id="4_twatu"]
[ext_resource type="AudioStream" uid="uid://cpu4e85axr6pk" path="res://SFX/sfx_dash.wav" id="5_8clxs"]
[ext_resource type="PackedScene" uid="uid://bo4khdlh3bcpu" path="res://Scenes/ctrl_ui.tscn" id="5_yyfxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wsci"]
size = Vector2(37, 40)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_s2kkl"]
polygon = PackedVector2Array(-16, -16, 0, -16, 16, -16, 8, 0, 8, 16, -8, 16, -8, 0, -16, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dlc4"]
size = Vector2(42, 48)

[node name="Player" type="CharacterBody2D" groups=["player", "switch"]]
light_mask = 3
script = ExtResource("1_mhc21")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6wsci")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_sbtbl")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
visibility_layer = 2
z_index = -1
occluder = SubResource("OccluderPolygon2D_s2kkl")
occluder_light_mask = 2

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(2, 2)

[node name="LightDetection" type="Node2D" parent="SubViewport"]
light_mask = 7

[node name="Camera2D" type="Camera2D" parent="SubViewport/LightDetection"]
light_mask = 7
visibility_layer = 7

[node name="TextureRect" type="TextureRect" parent="SubViewport/LightDetection"]
light_mask = 0
offset_left = -8.0
offset_top = 16.0
offset_right = -7.0
offset_bottom = 17.0

[node name="tmDash" type="Timer" parent="."]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="sfxDash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8clxs")
bus = &"Sfx"

[node name="sfxHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2l08b")

[node name="sfxBurning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_twatu")
volume_db = -20.0
bus = &"Sfx"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ctrlUI" parent="CanvasLayer" instance=ExtResource("5_yyfxp")]
metadata/_edit_use_anchors_ = true

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="."]

[node name="a2dGrab" type="Area2D" parent="." groups=["grab"]]

[node name="csGrab" type="CollisionShape2D" parent="a2dGrab"]
position = Vector2(13, 0)
shape = SubResource("RectangleShape2D_5dlc4")
disabled = true
debug_color = Color(0.586959, 0.378422, 1, 0.42)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="timeout" from="tmDash" to="." method="_on_tm_dash_timeout"]
[connection signal="body_entered" from="a2dGrab" to="." method="_on_a_2d_grab_body_entered"]
